--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Weather App</title>
     <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
@@ -51,8 +50,8 @@
             <div class="space-x-2 mb-4 items-center justify-center flex">
                 <input type="text" id="cityName" spellcheck="false" placeholder="Search your city"
                     class="p-2 text-white bg-transparent border border-gray-300 rounded-md focus:outline-none focus:ring">
-                <button class="p-2 text-white rounded-md border focus:outline-none focus:ring" onclick="searchTemp()">
-                    <i class="fa fa-search" aria-hidden="true"></i>
+                <button type="submit" class="p-2 text-white rounded-md border focus:outline-none focus:ring" onclick="searchTemp()">
+                    <i class="bi bi-search"></i>
                 </button>
             </div>
             <span id="error" class="text-xs flex justify-center text-red-700 -mt-3 invisible">No matching location
@@ -62,21 +61,19 @@
                 <div class="relative inline-block text-left">
                     <div>
                         <button type="button" class="mt-1 mx-2 left-0" onclick="dropDown('show')">
-                            <i class="fa fa-chevron-down text-gray-400" fill="currentColor" aria-hidden="true"></i>
+                            <i class="bi bi-chevron-down text-gray-400" fill="currentColor"></i>
                         </button>
                     </div>
 
                     <div id="dropdown"
-                        class="absolute left-0 invisible mt-2 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
+                        class="absolute left-0 invisible mt-2 origin-top-right rounded-md shadow-lg ring-1 ring-white border ring-opacity-5 focus:outline-none"
                         role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1">
                         <div class="py-1" role="none">
 
-                            <button class="text-gray-700 block text-sm p-1" role="menuitem" tabindex="-1"
-                                onclick="dropDown('hide')"> <i class="fa fa-arrow-left" aria-hidden="true"></i></button>
-                            <hr>
                             <!-- Active: "bg-gray-100 text-gray-900", Not Active: "text-gray-700" -->
                             <button class="text-gray-700 block px-4 py-2 text-sm" id="feirenheit"
                                 onclick="degree(this.id)">&#8457;</button>
+                                <hr>
                             <button class="text-gray-700 block px-4 py-2 text-sm" id="celcius"
                                 onclick="degree(this.id)">&#8451;</button>
 
@@ -85,7 +82,7 @@
                 </div>
             </div>
             <div class="text-white p-2">
-                <p class="text-4xl p-2 justify-center flex" id="temp">30.2&deg;</p>
+                <p class="text-4xl p-2 justify-center flex"><i class="bi bi-thermometer-half text-2xl mt-2 text-red-600"></i><span id="temp">30.2&deg;</span></p>
             </div>
             <div class="flex flex-wrap justify-around">
                 <div class="m-2 flex items-center justify-center text-white">
